// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableComponent renders correctly 1`] = `
<div
  className="zui-table"
>
  some title
  <table
    className={null}
    style={
      Object {
        "borderSpacing": "0",
        "width": "100%",
      }
    }
  >
    <thead>
      <tr />
    </thead>
    <tbody />
  </table>
  <div
    className="zui-table_bottom"
  />
</div>
`;

exports[`TableComponent renders items 1`] = `
<div
  className="zui-table"
>
  some title
  <table
    className={null}
    style={
      Object {
        "borderSpacing": "0",
        "width": "100%",
      }
    }
  >
    <thead>
      <tr>
        <th>
          header 1
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="selectedListItem"
        onClick={[Function]}
      >
        <td
          className="zui-table_icon"
        >
          <div>
            
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="zui-table_bottom"
  />
</div>
`;

exports[`TableComponent renders items with numerical ids 1`] = `
<div
  className="zui-table"
>
  some title
  <table
    className={null}
    style={
      Object {
        "borderSpacing": "0",
        "width": "100%",
      }
    }
  >
    <thead>
      <tr>
        <th>
          header 1
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="selectedListItem"
        onClick={[Function]}
      >
        <td
          className="zui-table_icon"
        >
          <div>
            
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="zui-table_bottom"
  />
</div>
`;
